# gwi

./: .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sync.py
.github/workflows/: static-on-push.yml  static.yml  sync.yml
docs/: conf.py  index.rst  requirements.txt
simple/: index.html  index.json  index.txt
simple/basemap/: index.html
simple/cartopy/: index.html
simple/cftime/: index.html
simple/fiona/: index.html
simple/gdal/: index.html
simple/h5py/: index.html
simple/netcdf4/: index.html
simple/pygeos/: index.html
simple/pyogrio/: index.html
simple/pyproj/: index.html
simple/rasterio/: index.html
simple/rtree/: index.html
simple/shapely/: index.html
simple/tables/: index.html
tests/: test_repo.py
